CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.6        |
+-----------------------+
BUGFIXES
31-01-06    Fixed error that occurs when empty array passed to implodeWithKeys()
            (sirphp)

IMPROVEMENTS
01-02-06    Improved logic in installer for improved flexibility
30-01-06    Added path search for email templates when default theme is not being
            used (Werner Krauss)
30-01-06    Region lists added for Poland (Tomasz Osmialowski)
30-01-06    Added perm checking method for use in templates, SGL_Output::hasPerms()
            (Tomasz Osmialowski)
30-01-06    Implemented abilty for blocks to receive stored params, removed
            Quickform from block code (Andrey Podshivalov)
30-01-06    SGL_HTTP_Session renamed to SGL_Session
30-01-06    SGL_HTTP::redirect(array()); cleaned up to SGL_HTTP::redirect();
26-01-06    Path to seagull/var explicitly named when not writable in installer

+-----------------------+
| VERSION: 0.5.5        |
+-----------------------+
BUGFIXES
23-01-06    Fixed small bug where registry of PEAR modules listed in installer
            was referring to the system instead of local PEAR install
20-01-06    Problems with adding subscribers fixed in NewsletterMgr
            (AJ Tarachanowicz)
20-01-06    Problems with ContentTypeMgr fixed (AJ Tarachanowicz)
17-01-06    Fixed problems with naming conventions in module generator
30-12-05    Fixed bug where contact us template could not be found (Andrey Podshivalov)
21-12-05    Ancestors correctly highlighted in navigation trees (Gerald Fishcer)
20-12-05    Added missing path vars in config template (Tomasz Osmialowski)
20-12-05    Fixed corruption of german language file in default module
19-12-05    Fixed incorrect constant which prevented instant messages from working
            correctly
16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)

IMPROVEMENTS
23-01-06    Implemented web-based PEAR package and channel management.  Basic ideas