@@ -4,6 +4,7 @@ CHANGELOG
 | VERSION: 0.5.6        |
 +-----------------------+
 BUGFIXES
+03-02-06    Checks for session timeout improved (Andrey Podshivalov)
 31-01-06    Fixed error that occurs when empty array passed to implodeWithKeys()
             (sirphp)
 
